# nrf51-blinky-cmake

./: CMakeLists.txt  main.c
